# ChangeLog for dev-ruby/xml-simple
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/xml-simple/ChangeLog,v 1.41 2014/07/07 06:14:42 graaff Exp $

*xml-simple-1.1.4 (07 Jul 2014)

  07 Jul 2014; Hans de Graaff <graaff@gentoo.org> +xml-simple-1.1.4.ebuild:
  Version bump.

*xml-simple-1.1.3-r1 (12 Apr 2014)

  12 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +xml-simple-1.1.3-r1.ebuild,
  xml-simple-1.1.3.ebuild:
  Remove ruby18 target. Add ruby21 target.

  04 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -xml-simple-1.1.2-r1.ebuild,
  -xml-simple-1.1.2.ebuild:
  Cleanup old.

  03 Mar 2014; Pacho Ramos <pacho@gentoo.org> xml-simple-1.1.3.ebuild:
  amd64 stable, bug #502300

*xml-simple-1.1.3 (26 Dec 2013)

  26 Dec 2013; Hans de Graaff <graaff@gentoo.org> +xml-simple-1.1.3.ebuild:
  Version bump.

*xml-simple-1.1.2-r1 (04 Oct 2013)

  04 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +xml-simple-1.1.2-r1.ebuild:
  Add ruby20 target.

  05 Sep 2013; Manuel Rüger <mrueg@gentoo.org> -xml-simple-1.1.1.ebuild:
  Cleanup old.

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> xml-simple-1.1.2.ebuild:
  Stable for amd64, wrt bug #483608

  05 Sep 2013; Manuel Rüger <mrueg@gentoo.org> -xml-simple-1.1.1-r1.ebuild:
  Cleanup old.

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due http://gentoo.2317880.n4.nabble.com/sgml-herd-has-no-maintainers-
  again-td259655.html

*xml-simple-1.1.2 (07 Nov 2012)

  07 Nov 2012; Hans de Graaff <graaff@gentoo.org> +xml-simple-1.1.2.ebuild:
  Version bump by Michel Boaventura in the ruby overlay.

*xml-simple-1.1.1-r1 (27 Sep 2012)

  27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> xml-simple-1.1.1.ebuild,
  +xml-simple-1.1.1-r1.ebuild:
  Move USE_RUBY="ruby19" to -r1 and stabilize -r0 for =dev-ruby/flickr-1.0.2-r3
  (amd64)

  24 Sep 2012; Hans de Graaff <graaff@gentoo.org> -xml-simple-1.0.12-r1.ebuild,
  -xml-simple-1.0.16.ebuild, -xml-simple-1.1.0.ebuild: