@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/xml-simple
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/xml-simple/ChangeLog,v 1.41 2014/07/07 06:14:42 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/xml-simple/ChangeLog,v 1.42 2014/07/18 08:18:00 graaff Exp $
+
+  18 Jul 2014; Hans de Graaff <graaff@gentoo.org> -xml-simple-1.1.3-r1.ebuild:
+  Cleanup.
 
 *xml-simple-1.1.4 (07 Jul 2014)
 
